docs/f_engine代码审查报告_2026-03-24.txt
================================================================================
交易引擎代码审查报告（修订版）
基于《交易引擎业务流程文档 V1.4》
================================================================================
审查日期: 2026-03-24
审查范围: crates/f_engine/src/
状态: 代码无法编译

================================================================================
0. 编译状态：阻塞性错误
================================================================================

错误信息:
  error[E0583]: file not found for module `engine`
    --> crates\f_engine\src\core\mod.rs:19:1
     |
  19 | pub mod engine;
     | ^^^^^^^^^^^^^^^

问题:
  - core/mod.rs 第19行声明 pub mod engine; 但 engine.rs 文件不存在
  - core/mod.rs 第35行 pub use engine::TradingEngine; 也会失败
  - 实际使用的是 engine_v2.rs 中的 TradingEngineV2

================================================================================
1. 合规性评分
================================================================================

维度               | 得分  | 说明
-------------------|--------|--------------------------------------------------
架构规范           |  45%  | engine 模块缺失，两套架构并存
状态安全           |  80%  | 线程安全实现正确（原子类型）
业务流程           |  45%  | 核心流程缺失多个关键步骤
核心功能           |  50%  | 订单生命周期不完整
生产特性           |  40%  | 熔断/限流未集成
异常处理           |  35%  | 超时/失败场景处理缺失
-------------------|--------|--------------------------------------------------
综合评分           |  45%  | 代码无法编译，不可以上线

================================================================================
2. 业务流程遗漏点
================================================================================

2.1 缺失：完整触发器→执行主循环
--------------------------------------------------------------------------------
V1.4 要求：
  并行触发器 → CheckTables → StrategyQuery → 风控预检 → 抢锁 → 风控精校 → 下单 → 成交回报 → 状态对齐

实际情况：
  - triggers.rs: 只有 check() 方法，无实际触发逻辑
  - engine_v2.rs: process_tick() 直接走简化流程
  - 完全跳过了 CheckTables 双通道、StrategyQuery 超时(2s)、抢锁机制(1s)

2.2 缺失：品种级交易锁（1s 超时）
--------------------------------------------------------------------------------
V1.4 要求：
  - 锁粒度：品种级独立锁
  - 锁超时：1s，拿不到直接拒单
  - 锁范围：只包住「状态比对 + 落地」，不包住下单

实际情况：
  - state.rs 的 TradeLock 只是时间戳，无 try_lock 获取机制
  - 无锁等待超时处理

2.3 缺失：StrategyQuery 2s 超时
--------------------------------------------------------------------------------
V1.4 要求：
  - 接口超时：2s
  - 超时判定失败、计数熔断

实际情况：
  - execution.rs:36 定义了 strategy_query_timeout_secs: 2
  - 但从未被使用，无超时检测代码

2.4 缺失：熔断器集成
--------------------------------------------------------------------------------
V1.4 要求：
  - 连续失败阈值（默认5）→ 自动暂停对应品种
  - 品种级 + 引擎级两级熔断

实际情况：
  - CircuitBreaker 定义了但未与主流程集成
  - RiskManager.lock_check() 失败时未触发熔断计数

================================================================================
3. 代码 Bug / 风险点（修订）
================================================================================

【严重】3.1 编译错误：engine 模块不存在
--------------------------------------------------------------------------------
位置: core/mod.rs:19, 35

问题:
  - pub mod engine; 引用不存在的 engine.rs
  - pub use engine::TradingEngine; 无法解析

修复:
  - 删除 core/mod.rs 中的 engine 相关声明
  - 或创建 engine.rs 实现 TradingEngine

【轻微】3.2 confirm_usage 潜在问题（已修正上次误报）
--------------------------------------------------------------------------------
位置: business_types.rs:524-529

代码:
  pub fn confirm_usage(&mut self, amount: Decimal) {
      if amount <= self.frozen {
          self.frozen -= amount;
          self.used += amount;
      }
      // 如果 amount > frozen，silent failure
  }

说明:
  - 上次报告为严重bug，实际为防御性编程建议
  - 正常业务逻辑下不应发生 amount > frozen
  - 但建议添加日志或返回 Result 以便追溯

【已修正】3.3 can_trade() - 上次误报
--------------------------------------------------------------------------------
澄清: can_trade() 第620行调用的是 is_triggered() 方法，不是字段访问。
      代码实际是正确的。

【已修正】3.4 SymbolMetrics 线程安全 - 上次误报
--------------------------------------------------------------------------------
澄清: SymbolMetrics 确实使用了 AtomicU64 (state.rs:133-141)，
      线程安全实现正确。

【中等】3.5 两个并行的 RiskCheckResult 定义
--------------------------------------------------------------------------------
位置1: interfaces/risk.rs:11
  { allowed: bool, reason, risk_level }

位置2: core/business_types.rs:278
  { pre_check_passed: bool, lock_check_passed: bool }

问题: V1.4 要求的两层风控结构与接口层定义不一致。

【中等】3.6 engine_v2.rs 流程简化
--------------------------------------------------------------------------------
问题:
  - TradingEngineV2.process_signal() 未使用完整的 TradingPipeline
  - 未使用 RiskManager 的完整风控
  - 自己实现了简化版风控和执行逻辑

================================================================================
4. 线程安全 / 并发问题（修订）
================================================================================

【已修正】SymbolMetrics 非线程安全 - 已确认安全
--------------------------------------------------------------------------------
state.rs:133-141 使用了 AtomicU64，record_tick/signal/order_sent 等方法
使用 fetch_add，线程安全。

【确认】CircuitBreaker 内部状态竞态风险
--------------------------------------------------------------------------------
CircuitBreaker.record_error() 使用 u32 非原子递增。
如果多线程同时调用 record_error()，可能丢失计数。
建议改用 AtomicU32。

================================================================================
5. 优化建议
================================================================================

5.1 必须修复（上线前）
--------------------------------------------------------------------------------
优先级 | 问题                          | 位置
--------|-------------------------------|------------------
  P0   | 删除/修复 engine 模块引用      | core/mod.rs:19,35
  P0   | 实现完整的 TradingPipeline 主循环 | execution.rs
  P0   | 实现品种级锁获取（try_lock 1s）| state.rs
  P1   | 集成熔断器到主流程            | engine_v2.rs
  P1   | 实现订单超时监控              | execution.rs
  P1   | RiskCheckResult 统一          | interfaces/risk.rs
  P2   | CircuitBreaker 改用 AtomicU32 | engine_state.rs

5.2 建议增强
--------------------------------------------------------------------------------
功能                   | 当前状态 | 建议
-----------------------|----------|----------------------------------
订单唯一 ID 追踪        | 无        | 添加全局 OrderIDGenerator
订单超时自动撤单        | 无        | 添加超时监控任务
部分成交处理           | 无        | 实现 rollback_partial_fill
启动自检对齐           | 无        | 调用 self_check()
限流（每秒下单频次）    | 无        | 在 OrderExecutor 添加计数器

================================================================================
6. 是否可直接上线
================================================================================

答案：不可以

阻塞问题：
  1. 代码无法编译 - engine 模块不存在
  2. 核心流程未实现 - CheckTables、抢锁、状态对齐均缺失
  3. 熔断器未集成 - 可能导致连续失败时无法暂停

修复工作量评估：
  阶段  | 任务                          | 估计
  ------|-------------------------------|--------
   P0  | 修复 engine 模块引用           | 10 分钟
   P0  | 实现 TradingPipeline 主循环      | 2 天
   P1  | 实现品种级锁机制               | 1 天
   P1  | 集成熔断器到主流程             | 4 小时
   P2  | 订单超时/重试机制              | 1 天
  ------|-------------------------------|--------
  总计  |                                | 约 4 人天

================================================================================
附录：代码质量亮点（确认）
================================================================================

以下做得正确，值得保持：

  + EngineState 字段全部私有化，通过方法访问
  + 高频指标使用 AtomicU64（tick_processed 等）
  + CircuitBreaker 配置和生产/回测分离
  + FundPool 的 freeze → confirm → rollback 三阶段设计
  + interfaces/ 模块化接口定义规范
  + 错误码体系 EngineErrorCode 完整
  + SymbolMetrics 正确使用原子类型

================================================================================
附录：上次审查误报更正
================================================================================

本次修订澄清了以下误报：

  1. can_trade() bug - 误报，代码正确调用 is_triggered() 方法
  2. SymbolMetrics 线程安全 - 误报，确实使用了 AtomicU64
  3. confirm_usage 严重bug - 降级为轻微设计建议

================================================================================
报告结束
================================================================================
